--- a/searx/static/themes/eelo/less/eelo/search.less
+++ b/searx/static/themes/eelo/less/eelo/search.less
@@ -37,6 +37,8 @@
       background: none;
       padding: 0;
       display: flex;
+      align-items: center;
+      justify-content: center;
       cursor: pointer;
   
       .icon { transition: fill 0.2s ease-in-out, transform 0.1s ease-in-out; }
@@ -194,6 +196,7 @@
 
       #time_and_lang { 
         display: flex;
+        margin-left: @spacing_xx-large;
         > * { width: auto; }
       }
     }
